--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,25 +11,29 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CiudadesMysql">
+
         <activity android:name=".MostrarCiudadesActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
-        <activity android:name=".ActualizarProvinciaActivity2" />
+        <activity android:name=".ActualizarProvinciaActivity2">
+        </activity>
+
         <activity android:name=".ActualizarProvinciaActivity1">
+        </activity>
+
+        <activity android:name=".BorrarProvinciaActivity">
+        </activity>
+
+        <activity android:name=".NuevaProvinciaActivity">
+        </activity>
+
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".BorrarProvinciaActivity" />
-        <activity android:name=".NuevaProvinciaActivity" />
-        <activity android:name=".MainActivity" />
+
     </application>
 
 </manifest>
