--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CiudadesMysql">
-        <activity android:name=".MostrarDetalleCiudadActivity"></activity>
+        <activity android:name=".MostrarDetalleCiudadActivity" />
         <activity android:name=".NuevaCiudadActivity" />
         <activity android:name=".MostrarCiudadesActivity" />
         <activity android:name=".ActualizarProvinciaActivity2" />
